--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-hello world and vitrobiani!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Resume</title>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Software Engineer</p>
+    </header>
+    <main>
+        <section>
+            <h2>Education</h2>
+            <p>Details about your education...</p>
+        </section>
+        <section>
+            <h2>Experience</h2>
+            <p>Details about your work experience...</p>
+        </section>
+    </main>
+    <footer>
+        <p>Contact Information</p>
+    </footer>
+</body>
+</html>
