--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Vitrobiani</title>
+    <link rel="styleshit" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Software Engineer</p>
-    </header>
-    <main>
-        <section>
-            <h2>Education</h2>
-            <p>Details about your education...</p>
-        </section>
-        <section>
-            <h2>Experience</h2>
-            <p>Details about your work experience...</p>
-        </section>
-    </main>
-    <footer>
-        <p>Contact Information</p>
-    </footer>
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="/" id="navbar__logo">NEXT</a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="menu__item">
+                    <a href="/" class="navbar__links">
+                        Home
+                    </a>
+                    <a href="./projects.html" class="navbar__links">
+                        Projects
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
