--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">NEXT</a>
+            <a href="/" id="navbar__logo">Vitrobiani</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
-                <li class="menu__item">
+                <li class="navbar__item">
                     <a href="/" class="navbar__links">
                         Home
                     </a>
+                </li>
+                <li class="navbar__item">
                     <a href="./projects.html" class="navbar__links">
                         Projects
                     </a>
