--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitrobiani</title>
-    <link rel="styleshit" href="styles.css">
+    <link rel="styleshit" href="style.css">
 </head>
 <body>
     <nav class="navbar">
