--- a/projects.html
+++ b/projects.html
@@ -63,8 +63,8 @@
           <button class="main__btn"><a href="https://github.com/vitrobiani/gdo_compiler_py">GitHub</a></button>
         </div>
         <div class="services__card">
-          <h2>Are you Ready?</h2>
-          <p>Take the leap</p>
+          <h2>Database Project</h2>
+          <p>a postgres database project implemented on a store management application</p>
           <button>Get Started</button>
         </div>
       </div>
