--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML CSS Website</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -33,12 +34,12 @@
             <a href="/" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="/projects.html" class="navbar__links">Tech</a>
+            <a href="/projects.html" class="navbar__links">Projects</a>
           </li>
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Products</a>
-          </li>
-          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
+          <!-- <li class="navbar__item"> -->
+          <!--   <a href="/" class="navbar__links">Products</a> -->
+          <!-- </li> -->
+          <li class="navbar__btn"><a href="/" class="button">Show CV</a></li>
         </ul>
       </div>
     </nav>
