--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
         <div class="services__card">
           <h2>Database Project</h2>
           <p>a postgres database project implemented on a store management application</p>
-          <button>Get Started</button>
+          <button class="main__btn"><a href="https://github.com/vitrobiani/DatabasesProject">GitHub</a></button>
         </div>
       </div>
     </div>
