--- a/cv.html
+++ b/cv.html
@@ -44,19 +44,10 @@
       </div>
     </nav>
 
-
     <!-- Hero Section -->
     <div class="main">
       <div class="main__container">
-        <div class="main__content">
-          <h1>Omer Attia</h1>
-          <h2></h2>
-          <p></p>
-          <button class="main__btn"><a target="_blank" href="https://www.linkedin.com/in/omer-attia-3a3337256/">LinkedIn</a></button>
-        </div>
-        <div class="main__img--container">
-          <img id="main__img" src="images/pic1.svg" />
-        </div>
+        <iframe src="cv.pdf" width="100%" height="800px"></iframe>
       </div>
     </div>
 
