--- a/projects.html
+++ b/projects.html
@@ -20,28 +20,10 @@
     />
   </head>
   <body>
-    <!-- Navbar Section -->
-    <nav class="navbar">
-      <div class="navbar__container">
-        <a href="/" id="navbar__logo"><img src="images/anthropology.png" class="mainimg">VITROBIANI</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/projects.html" class="navbar__links">Tech</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Products</a>
-          </li>
-          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
-        </ul>
-      </div>
-    </nav>
+
+    <!-- In your HTML files -->
+    {% include nav.html %}
+
 
     <!-- Hero Section -->
     <div class="main">
