--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--
-      Site created by Brian Design on youtube @ www.youtube.com/channel/UCsKsymTY_4BYR-wytLjex7A?view_as=subscriber
-    -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML CSS Website</title>
+    <title>vitrobiani</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -39,7 +36,7 @@
           <li class="navbar__item"> 
             <a href="/cv.html" class="navbar__links">Show CV</a>
           </li>
-          <li class="navbar__btn"><a href="/" class="button">Download CV</a></li>
+          <li class="navbar__btn"><a href="cv.pdf" class="button" download="cv.pdf">Download CV</a></li>
         </ul>
       </div>
     </nav>
@@ -53,9 +50,14 @@
           <h2></h2>
           <p></p>
           <button class="main__btn"><a target="_blank" href="https://www.linkedin.com/in/omer-attia-3a3337256/">LinkedIn</a></button>
+          <button class="main__btn"><a target="_blank" href="https://github.com/vitrobiani/">GitHub</a></button>
         </div>
         <div class="main__img--container">
-          <img id="main__img" src="images/pic1.svg" />
+          <h2>About me</h2>
+          <p>Software engineering student entering the third year of study, with a solid understanding of programming, algorithms, and
+systems development. Seeking opportunities to gain practical experience and apply academic knowledge in a professional
+setting, with a focus on contributing to meaningful software projects.
+For some of my projects please check out the <a href="/projects.html">Projects page</a></p>
         </div>
       </div>
     </div>
@@ -67,7 +69,8 @@
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>Contact Me</h2>
-            <a href="mailto:vitrobiani#gmail.com">Mail Me</a> <a href="/">Leave a message</a>
+            <a href="mailto:vitrobiani#gmail.com">Mail Me</a>
+            <a href="/leaveMessage.html">Leave a message</a>
           </div>
         </div>
       </div>
