--- a/leaveMessage.html
+++ b/leaveMessage.html
@@ -44,8 +44,8 @@
     <div class="main">
       <div class="main__container">
         <div class="main__content">
-            <h2>Contact Us</h2>
-            <form action="sendmail.php" method="post">
+            <h2>Contact Me</h2>
+            <form action="https://formspree.io/f/mnnawgde" method="post">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" required><br><br>
                 <label for="email">Email:</label><br>
@@ -57,69 +57,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Footer Section -->
-    <div class="footer__container">
-      <div class="footer__links">
-        <div class="footer__link--wrapper">
-          <div class="footer__link--items">
-            <h2>Contact Me</h2>
-            <a href="mailto:vitrobiani#gmail.com">Mail Me</a> <a href="/">Leave a message</a>
-          </div>
-        </div>
-      </div>
-      <section class="social__media">
-        <div class="social__media--wrap">
-          <div class="footer__logo">
-            <a href="/" id="footer__logo"><img src="images/anthropology.png" width="42" height="42"></i>VITROBIANI</a>
-          </div>
-          <p class="website__rights">© vitrobiani 2024</p>
-          <div class="social__icons">
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="Facebook"
-            >
-              <i class="fa-solid fa-envelope"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="Instagram"
-            >
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="//www.youtube.com/channel/UCsKsymTY_4BYR-wytLjex7A?view_as=subscriber"
-              target="_blank"
-              aria-label="Youtube"
-            >
-              <i class="fab fa-youtube"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="Twitter"
-            >
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="LinkedIn"
-            >
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-    </div>
     <script src="app.js"></script>
-    
 </body>
 </html>
