deleted the old idea went with a new one worked on it all day!

--- a/footer.html
+++ b/footer.html
@@ -1,55 +1,22 @@
 
-    <!-- Footer Section -->
-    <div class="footer__container">
-      <div class="footer__links">
-        <div class="footer__link--wrapper">
-          <div class="footer__link--items">
-            <h2>Contact Me</h2>
-            <a href="mailto:vitrobiani#gmail.com">Mail Me</a>
-            <a href="/leaveMessage.html">Leave a message</a>
-          </div>
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1><a href="/">vitrobiani</a>
+                </h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="mailto:vitrobiani@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
+                <a href="https://github.com/vitrobiani" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/omer-attia-3a3337256/?originalSubdomain=il" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+            </div>
         </div>
-      </div>
-      <section class="social__media">
-        <div class="social__media--wrap">
-          <div class="footer__logo">
-            <a href="/" id="footer__logo"><img src="images/anthropology.png" width="42" height="42"></i>VITROBIANI</a>
-          </div>
-          <p class="website__rights">© vitrobiani 2024</p>
-          <div class="social__icons">
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="mail"
-            >
-              <i class="fa fa-envelope"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="https://www.instagram.com/omerattia1/"
-              target="_blank"
-              aria-label="Instagram"
-            >
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="https://www.youtube.com/@vitrobiani"
-              target="_blank"
-              aria-label="Youtube"
-            >
-              <i class="fab fa-youtube"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="https://www.linkedin.com/in/omer-attia-3a3337256/?originalSubdomain=il"
-              target="_blank"
-              aria-label="LinkedIn"
-            >
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-    </div>
+    </footer>
