--- a/index.html
+++ b/index.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vitrobiani</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
-      integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Navbar Section -->
-    <nav class="navbar">
-      <div class="navbar__container">
-        <a href="/" id="navbar__logo"><img src="images/anthropology.png" class="mainimg" width="40" height="40">VITROBIANI</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
-          <span class="bar"></span>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script type = "text/javascript" src="functions.js"></script>
+    <title>vitrobiani</title>
+</head>
+<body>
+    <div id="nav"></div>
+    <script>loadhtml("nav.html", "nav")</script>
+    
+    <!-- Showcase -->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Welcome</h1>
+                <p>Hello my name is Omer Attia, Im software engineering student entering the third year of study.<br>
+                    For some of my projects please check out the <a href="/projects.html">Projects page</a></p>
+                <a href="https://www.linkedin.com/in/omer-attia-3a3337256/" class="btn btn-outline" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+                <a href="https://github.com/vitrobiani/" class="btn btn-outline" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
+                <a href="/assets/cv.pdf" class="btn btn-outline" target="_blank"><i class="fas fa-address-card"></i>Resume</a>
+            </div>
+
+            <div class="showcase-form card">
+                <h2>Leave Me A Message</h2>
+                 <form action="https://formspree.io/f/mnnawgde" method="post">
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-control">
+                        <textarea id="message" name="message" placeholder="Message" required></textarea>
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+            </div>
         </div>
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/projects.html" class="navbar__links">Projects</a>
-          </li>
-          <li class="navbar__item"> 
-            <a href="/cv.html" class="navbar__links">Show CV</a>
-          </li>
-          <li class="navbar__btn"><a href="cv.pdf" class="button" download="cv.pdf">Download CV</a></li>
-        </ul>
-      </div>
-    </nav>
+    </section>
 
 
-    <!-- Hero Section -->
-    <div class="main">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>Omer Attia</h1>
-          <h2></h2>
-          <p></p>
-          <button class="main__btn"><a target="_blank" href="https://www.linkedin.com/in/omer-attia-3a3337256/">LinkedIn</a></button>
-          <button class="main__btn"><a target="_blank" href="https://github.com/vitrobiani/">GitHub</a></button>
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Languages
+        </h2>
+        <div class="container flex">
+              <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="">
+              </div>
+              <div class="card">
+                <h4>Java</h4>
+                <img src="images/logos/java.png" alt="" width="100" height="82">
+              </div>
+              <div class="card">
+                <h4>C</h4>
+                <img src="images/logos/C_Logo.png" alt="" width="100" height="82">
+              </div>
         </div>
-        <div class="main__img--container">
-          <h2>About me</h2>
-          <p>Software engineering student entering the third year of study, with a solid understanding of programming, algorithms, and
-systems development. Seeking opportunities to gain practical experience and apply academic knowledge in a professional
-setting, with a focus on contributing to meaningful software projects.
-For some of my projects please check out the <a href="/projects.html">Projects page</a></p>
-        </div>
-      </div>
-    </div>
+    </section>
 
     <div id="footer"></div>
-
-    <script src="app.js"></script>
-  </body>
+    <script>loadhtml("footer.html", "footer")</script>
+</body>
 </html>
