--- a/nav.html
+++ b/nav.html
@@ -1,22 +1,17 @@
-    <!-- Navbar Section -->
-    <nav class="navbar">
-      <div class="navbar__container">
-        <a href="/" id="navbar__logo"><img src="images/anthropology.png" class="mainimg" width="40" height="40">VITROBIANI</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
-          <span class="bar"></span>
+
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="container flex">
+             <!-- <h1 class="logo"><img src="images/anthropology.png" class="mainimg" width="36" height="36"><a href="index.html">Loruki.</a></h1> -->
+            <h1><a href="/" id="navbar__logo"><img src="images/anthropology.png" class="mainimg" width="36" height="36">VITROBIANI</a></h1>
+
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="docs.html">Features</a></li>
+                    <li><a href="assets/cv.pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
+                </ul>
+            </nav>
         </div>
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/projects.html" class="navbar__links">Projects</a>
-          </li>
-          <li class="navbar__item"> 
-            <a href="/cv.html" class="navbar__links">Show CV</a>
-          </li>
-          <li class="navbar__btn"><a href="cv.pdf" class="button" download="cv.pdf">Download CV</a></li>
-        </ul>
-      </div>
-    </nav>
+    </div>
