--- a/ProjectsMenuOptions.html
+++ b/ProjectsMenuOptions.html
@@ -3,17 +3,36 @@
     <nav>
         <ul>
             <!-- <li><a class="text-primary" href="#">Introduction</a></li> -->
-            <li><a href="/projects.html" onclick="saveValue('Projects/gdo-compiler.html')">gdo compiler</a></li>
-            <li><a href="#">Installation</a></li>
+            <li><a href="#" onclick="saveValue('Projects/gdo-compiler.html')">GDO Compiler</a></li>
         </ul>
     </nav>
 
     <h3 class="my-2">Java Projects</h3>
     <nav>
         <ul>
-            <li><a href="#">Setting up a container</a></li>
-            <li><a href="#">Using the CLI</a></li>
-            <li><a href="#">Managing resources</a></li>
-            <li><a href="#">Upgrade & downgrade</a></li>
+            <li><a href="#" onclick="saveValue('Projects/Databases.html')">Databases Class Project</a></li>
+        </ul>
+    </nav>
+
+    <h3 class="my-2">C Projects</h3>
+    <nav>
+        <ul>
+            <li><a href="#" onclick="saveValue('Projects/Sys-Prog-Class-Proj.html')">System Programing Class Project</a></li>
+            <li><a href="#" onclick="saveValue('Projects/C-Makefile.html')">My C Makefile</a></li>
+        </ul>
+    </nav>
+
+    <h3 class="my-2">Web Projects</h3>
+    <nav>
+        <ul>
+            <li><a href="#" onclick="saveValue('Projects/ThisWebsite.html')">This Website</a></li>
+        </ul>
+    </nav>
+
+    <h3 class="my-2">Setups</h3>
+    <nav>
+        <ul>
+            <li><a href="#" onclick="saveValue('Projects/neovim.html')">neovim Setup</a></li>
+            <li><a href="#" onclick="saveValue('Projects/NixWSL.html')">Nix WSL Setup</a></li>
         </ul>
     </nav>
