fixing the styling

--- a/footer.html
+++ b/footer.html
@@ -1,14 +1,14 @@
 
     <!-- Footer -->
     <footer class="footer bg-dark py-5">
-        <div class="container grid grid-3">
+        <div class="container gridFoot grid-3">
             <div>
                 <h1><a href="/">vitrobiani</a>
                 </h1>
             </div>
-            <nav>
+            <nav class="footnav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
@@ -19,4 +19,10 @@
                 <a href="https://www.linkedin.com/in/omer-attia-3a3337256/?originalSubdomain=il" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
             </div>
         </div>
+        <style>
+            .footnav {
+                margin-left: -15px;
+                margin-right: 10px;
+            }
+        </style>
     </footer>
