--- a/Projects/gdo-compiler.html
+++ b/Projects/gdo-compiler.html
@@ -1,7 +1,7 @@
     <h2>Introduction</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio illo facere perferendis laborum? Similique recusandae incidunt eos dolorum aliquam ipsam unde perspiciatis laudantium totam quam laborum velit, at maxime minus?</p>
 
-    <div class="alert alert-success">
+    <div class="alert ">
         <i class="fas fa-info"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, animi?
     </div>
 
