making it so that when you click on a project it scrolls to the project cards location, and fixing swiching the projects

--- a/Projects/gdo-compiler.html
+++ b/Projects/gdo-compiler.html
@@ -1,9 +1,5 @@
-    <h2>Introduction</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio illo facere perferendis laborum? Similique recusandae incidunt eos dolorum aliquam ipsam unde perspiciatis laudantium totam quam laborum velit, at maxime minus?</p>
-
-    <div class="alert ">
-        <i class="fas fa-info"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, animi?
-    </div>
+    <h2>Overview</h2>
+    <p>This is an interpertor written in python for a programing languages class.</p>
 
     <h3>Lorem, ipsum dolor.</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima totam magni eius vitae velit id, atque veritatis! At, vero porro.</p>
