--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             <div class="card bg-light p-3">
                 <div id="opts"></div>
             </div>
-            <div class="card">
+            <div id="card" class="card">
                 <div id="proj"></div>
             </div>
         </div>
