--- a/Projects/Databases-java-proj.html
+++ b/Projects/Databases-java-proj.html
@@ -1,2 +1,18 @@
+
+    <h1 id="final-projectfor-database-class"><strong>Project For Database Class</strong> </h1>
     <h2>Overview</h2>
     <p>This is a store management system written in java, originaly for an Object Oriented Design class. I then repurposed it for a database class.</p>
+
+    <a href="https://github.com/vitrobiani/Final_Database_Java_Project/" class="btn btn-primary" target="_blank"><i class="fab fa-github"></i>Project's Github</a>
+
+    <p>this is a repurposed java project (<a href="https://github.com/vitrobiani/final_java_project_OOD" target="_blank"><u>original</u></a>).<br></p>
+    <p>the project focuses on implementing database principles, and innterfacing with the Postgresql DBMS through the JDBM and writing queries and updates to the Database</p>
+
+    <h3>Loading the project</h3>
+    <p>The db is managed by postgresql, so ofcource you need to install it in order to host this db. <br>
+    This program was written in java and so you wil need to add the JDBM driver JAR file to your project. <br>
+    For more information on loading the project please visit<a href="https://github.com/vitrobiani/Final_Database_Java_Project?tab=readme-ov-file#general-explanation" target="_blank"><u> Database section</u></a> in github <br>
+    when loading the project don't forget you can <a href="https://github.com/vitrobiani/Final_Database_Java_Project?tab=readme-ov-file#adding-products-automatically"><u>add items to the db automatically</u></a></p>
+
+    <h3>For more general information and details</h3>
+    <a href="https://github.com/vitrobiani/Final_Database_Java_Project?tab=readme-ov-file#general-explanation" class="btn btn-primary" target="_blank"><i class="fab fa-github"></i>General Information</a>
