--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
               </div>
               <div class="card">
                 <h4>Java</h4>
-                <img src="images/logos/java.png" alt="" width="100" height="82">
+                <img src="images/logos/java_optimized.png" alt="" >
               </div>
               <div class="card">
                 <h4>C</h4>
-                <img src="images/logos/C_Logo.png" alt="" width="100" height="82">
+                <img src="images/logos/C_Logo_optimized.png" alt="">
               </div>
         </div>
     </section>
