--- a/ProjectsMenuOptions.html
+++ b/ProjectsMenuOptions.html
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="projects.html#card" onclick="saveValue('Projects/Sys-Prog-Class-Proj.html')">System Programing Class Project</a></li>
             <li><a href="projects.html#card" onclick="saveValue('Projects/C-Makefile.html')">My C Makefile</a></li>
+            <li><a href="projects.html#card" onclick="saveValue('Projects/Datastructs.html')">Some Data Structs</a></li>
         </ul>
     </nav>
 
