fade in and touch ups

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     For some of my projects please check out the <a href="/projects.html">Projects page</a></p>
                 <a href="https://github.com/vitrobiani/" class="btn btn-outline" target="_blank"><i class="fab fa-github"></i>GitHub</a>
                 <a href="https://www.linkedin.com/in/omer-attia-3a3337256/" class="btn btn-outline" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
-                <a href="/assets/cv.pdf" class="btn btn-outline" target="_blank"><i class="fas fa-address-card"></i>Resume</a>
+                <a href="/assets/CV_(23).pdf" class="btn btn-outline" target="_blank"><i class="fas fa-address-card"></i>Resume</a>
             </div>
 
             <div class="showcase-form card">
@@ -46,11 +46,11 @@
 
 
     <!-- Languages -->
-    <section class="languages">
+    <section class="languages fade-in">
         <h2 class="md text-center my-2">
             Languages
         </h2>
-        <div class="container flex">
+        <div class="container flex ">
               <div class="card">
                 <h4>Python</h4>
                 <img src="images/logos/python.png" alt="">
