--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="assets/cv.pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
+                    <li><a href="assets/CV_(23).pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
                 </ul>
             </nav>
         </div>
