kinda fixed the twitching

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 
     <!-- Footer -->
-    <footer class="footer bg-dark py-5">
+    <footer class="footer bg-dark py-5 fade-in">
         <div class="container gridFoot grid-3">
             <div>
                 <h1><a href="/">vitrobiani</a>
