--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
     <title>Projects</title>
 </head>
 <body>
+
+    <div id="nav" style="height: 60px; background-color: #047aed;"></div>
     <div id="nav"></div>
     <script>loadhtml("nav.html", "nav")</script>
 
