--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="functions.js" as="script">
     <script type = "text/javascript" src="functions.js"></script>
     <title>vitrobiani</title>
 </head>
 <body>
+    
+    <div id="nav" style="height: 60px; background-color: #047aed;"></div>
     <div id="nav"></div>
     <script>loadhtml("nav.html", "nav")</script>
     
     <!-- Showcase -->
-    <section class="showcase">
+    <section class="showcase" loading="lazy">
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Welcome</h1>
