--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 
 
     <!-- Projects menu -->
-    <section class="docs-main my-4">
+    <section class="docs-main my-4 fade-in">
         <div class="container grid">
             <div class="card bg-light p-3">
                 <div id="opts"></div>
