some style choices

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
     <script>loadhtml("nav.html", "nav")</script>
 
     <!-- Head -->
-    <section class="docs-head bg-primary py-3">
-        <div class="container grid">
+    <section class="docs-head bg-primary py-4">
+        <div class="container grid botpaddocs">
             <div>
                 <h1 class="xl">Projects</h1>
                 <p class="lead">
@@ -26,8 +26,12 @@
                 </p>
             </div>
             <img src="images/docs.png" alt="">
+    <div class="mouse-icon fade-out">
+        <div class="wheel"></div>
+    </div>
         </div>
     </section>
+
 
 
     <!-- Projects menu -->
