--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -3,90 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script type = "text/javascript" src="functions.js"></script>
     <title>Sidebar Navigation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        #sidebar {
-            height: 100%;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: -250px; /* Start hidden */
-            background-color: #111;
-            overflow-x: hidden;
-            transition: 0.3s;
-            padding-top: 60px;
-        }
-
-        #sidebar a {
-            padding: 10px 15px;
-            text-decoration: none;
-            font-size: 25px;
-            color: white;
-            display: block;
-            transition: 0.3s;
-        }
-
-        #sidebar a:hover {
-            background-color: #575757;
-        }
-
-        #openBtn {
-            font-size: 20px;
-            cursor: pointer;
-            padding: 10px;
-            background-color: #111;
-            color: white;
-            border: none;
-        }
-
-        #main {
-            transition: margin-left .3s;
-            padding: 16px;
-        }
-
-        .closebtn {
-            position: absolute;
-            top: 15px;
-            right: 25px;
-            font-size: 36px;
-            color: white;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
 
+    <!-- Sidebar -->
     <div id="sidebar">
-        <span class="closebtn" onclick="closeNav()">&times;</span>
-        <a href="#home">Home</a>
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <button class="btn-primary" onclick="toggleSidebar()">☰ close Sidebar</button>
+        <button class="sidemenubtn" onclick="toggleSubMenu('sub1')">Menu 1</button>
+        <div class="sub-menu" id="sub1">
+            <a href="doc.html" onclick="saveValue('omer.html')"><button class="subitem">Sub-item 1</button></a>
+            <button class="subitem">Sub-item 2</button>
+        </div>
+        <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
+        <div class="sub-menu" id="sub2">
+            <button class="subitem">Sub-item 1</button>
+            <button class="subitem">Sub-item 2</button>
+        </div>
+        <button class="sidemenubtn" onclick="toggleSubMenu('sub3')">Menu 3</button>
+        <div class="sub-menu" id="sub3">
+            <button class="subitem">Sub-item 1</button>
+            <button class="subitem">Sub-item 2</button>
+        </div>
     </div>
 
-    <div id="main">
-        <button id="openBtn" onclick="openNav()">☰ Open Sidebar</button>
-        <h2>Welcome to My Website</h2>
-        <p>This is a simple sidebar example.</p>
+    <!-- Top Navbar -->
+    <div id="navbar">
+        <button btn="btn-primary" onclick="toggleSidebar()">☰ Open Sidebar</button>
+        <div>
+            <a href="#" onclick="saveValue('empty.html')"><i class="fa fa-home"></i>Home</a>
+            <a href="#">Option 2</a>
+        </div>
     </div>
 
-    <script>
-        function openNav() {
-            document.getElementById("sidebar").style.left = "0";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("sidebar").style.left = "-250px";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-    </script>
+    <!-- Main content -->
+    <div id="main-content"></div>
+    <script>loadhtmlSavedValue("main-content")</script>
 
 </body>
 </html>
