--- a/nixwsldoc/empty.html
+++ b/nixwsldoc/empty.html
@@ -1,3 +1,5 @@
 
-        <h1>Welcome to the Website</h1>
-        <p>This is the main content area. The sidebar can be opened to navigate through different sections of the site.</p>
+        <h1>Welcome to my nix config docs</h1>
+        <p>I'll explain here a bit more on the configuration and it's moving parts</p>
+        <p>this is just a template I'll fill it as I refine the build.</p>
+        <p>For now fill free to check the github page above.</p>
