--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <script type = "text/javascript" src="functions.js"></script>
-    <title>Sidebar Navigation</title>
+    <title>Nix-config</title>
 </head>
 <body>
 
