--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="form-control">
                         <textarea id="message" name="message" placeholder="Message" required></textarea>
                     </div>
-                    <input type="submit" value="Send" class="pageclip-form__submit">
+                    <input type="submit" value="Send" class="btn btn-primary pageclip-form__submit">
                 </form>
             </div>
         </div>
